@@ -117,7 +117,7 @@ module Test2 : sig type t = Test.t = private A end
   type 'a t = private < x : int; .. > as 'a;;
   
 Error: Type declarations do not match:
-         type 'a t = private < x : int; .. > constraint 'a = 'a t
+         type 'a t = private 'a constraint 'a = < x : int; .. >
        is not included in
          type 'a t
        Their constraints differ.
