@@ -24,6 +24,9 @@ Type system:
 * Module aliases are now typed in a specific way, which remembers their
   identity. In particular this changes the signature inferred by
   "module type of"
+- Slight change in the criterion to distinguish private abbreviations
+  and private row types: create a private abbreviation for closed objects
+  and fixed polymorphic variants (cf. PR#6331)
 
 Compilers:
 - Experimental native code generator for AArch64 (ARM 64 bits)
@@ -68,6 +71,7 @@ Bug fixes:
 - PR#6174: OCaml compiler loops on an example using GADTs (-rectypes case)
 - PR#6262: equality of first-class modules take module aliases into account
 - PR#6293: Assert_failure with invalid package type
+- PR#6331: `is_fixed_type` does not take account of nested aliases
 
 Features wishes:
 - PR#4243: make the Makefiles parallelizable
@@ -82,7 +86,6 @@ Features wishes:
 - PR#6071: Add a -noinit option to the toplevel (patch by David Sheets)
 - PR#6166: document -ocamldoc option of ocamlbuild
 - PR#6246: allow wilcard _ as for-loop index
-
 
 OCaml 4.01.1:
 -------------
